[package]
name = "print_return_values"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A crate containing a macro to print the return values of functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }
